Able to start putty sessions

--- a/XPuTTY-cli/XPuTTY-cli.csproj
+++ b/XPuTTY-cli/XPuTTY-cli.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>XPuTTY_cli</RootNamespace>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BLTools" Version="4.5.2" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\XPuTTY\XPuTTY.csproj" />
   </ItemGroup>
 
 </Project>
