--- a/XPuttyMan/packages.config
+++ b/XPuttyMan/packages.config
@@ -43,4 +43,5 @@
   <package id="System.ServiceProcess.ServiceController" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
 </packages>
