--- a/libxputty-std20/libxputty-std20.csproj
+++ b/libxputty-std20/libxputty-std20.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BLTools" Version="4.5.2" />
+    <PackageReference Include="BLTools.Json.dns.20" Version="4.5.2" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="2.0.1" />
   </ItemGroup>
 
