Lots of changes, a bit of dynamic

--- a/XPuttyMan/App.config
+++ b/XPuttyMan/App.config
@@ -9,6 +9,14 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BLTools.45" publicKeyToken="42a294c809db3b02" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.45.1.39146" newVersion="3.45.1.39146" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BLTools.WPF.45" publicKeyToken="42a294c809db3b02" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.45.1.38671" newVersion="3.45.1.38671" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
