--- a/XPuTTY-cli/Properties/launchSettings.json
+++ b/XPuTTY-cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "XPuTTY-cli": {
       "commandName": "Project",
-      "commandLineArgs": "/cmd=list"
+      "commandLineArgs": "/cmd=start"
     }
   }
 }
