--- a/XPuTTY-cli/XPuTTY-cli.csproj
+++ b/XPuTTY-cli/XPuTTY-cli.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BLTools" Version="4.5.2" />
+    <PackageReference Include="BLTools.45" Version="3.45.1" />
+    <PackageReference Include="BLTools.45.Json" Version="3.45.1" />
   </ItemGroup>
 
   <ItemGroup>
