--- a/XPuttyMan/packages.config
+++ b/XPuttyMan/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BLTools" version="4.5.2" targetFramework="net472" />
-  <package id="BLTools.WPF.45" version="3.45.0" targetFramework="net472" />
-  <package id="BLTools.WPF.Controls.45" version="3.45.0" targetFramework="net472" />
+  <package id="BLTools.45" version="3.45.1" targetFramework="net472" />
+  <package id="BLTools.45.Json" version="3.45.1" targetFramework="net472" />
+  <package id="BLTools.WPF.45" version="20181102.4.0" targetFramework="net472" />
+  <package id="BLTools.WPF.Controls.45" version="20181102.4.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Win32.SystemEvents" version="4.5.0" targetFramework="net472" />
@@ -43,5 +44,4 @@
   <package id="System.ServiceProcess.ServiceController" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.AccessControl" version="4.5.0" targetFramework="net472" />
-  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
 </packages>
