--- a/libxputty-std20/libxputty-std20.csproj
+++ b/libxputty-std20/libxputty-std20.csproj
@@ -6,6 +6,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="TPutty\TPuttySessionList.cs" />
   </ItemGroup>
