--- a/EasyPutty/EasyPutty.csproj
+++ b/EasyPutty/EasyPutty.csproj
@@ -29,7 +29,7 @@
     <UpdateUrl>http://localhost/XPuttyMan/</UpdateUrl>
     <ProductName>EasyPutty</ProductName>
     <PublisherName>Luc Bolly</PublisherName>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -232,6 +232,7 @@
     <Compile Include="Tools\Helpers.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\TVMPuttyGroup.cs" />
+    <Compile Include="ViewModels\TVMEditedPuttySession.cs" />
     <Compile Include="ViewModels\TVMSupportContact.cs" />
     <Compile Include="ViewModels\TVMSupportContacts.cs" />
     <Compile Include="ViewModels\TVMPuttySession.cs" />
