--- a/EasyPutty/EasyPutty.csproj
+++ b/EasyPutty/EasyPutty.csproj
@@ -78,11 +78,11 @@
     <ApplicationIcon>easyputty.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BLTools.45, Version=3.45.1.39146, Culture=neutral, PublicKeyToken=42a294c809db3b02, processorArchitecture=MSIL">
-      <HintPath>..\packages\BLTools.45.3.45.1\lib\net45\BLTools.45.dll</HintPath>
+    <Reference Include="BLTools.45, Version=3.45.2.24756, Culture=neutral, PublicKeyToken=42a294c809db3b02, processorArchitecture=MSIL">
+      <HintPath>..\packages\BLTools.45.3.45.2\lib\net45\BLTools.45.dll</HintPath>
     </Reference>
-    <Reference Include="BLTools.45.Json, Version=3.45.1.39165, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BLTools.45.Json.3.45.1\lib\net45\BLTools.45.Json.dll</HintPath>
+    <Reference Include="BLTools.45.Json, Version=3.45.1.24773, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BLTools.45.Json.3.45.2\lib\net45\BLTools.45.Json.dll</HintPath>
     </Reference>
     <Reference Include="BLTools.WPF.45, Version=3.45.1.38671, Culture=neutral, PublicKeyToken=42a294c809db3b02, processorArchitecture=MSIL">
       <HintPath>..\packages\BLTools.WPF.45.20181102.4.0\lib\net45\BLTools.WPF.45.dll</HintPath>
@@ -113,8 +113,8 @@
       <HintPath>..\packages\System.Data.Odbc.4.5.0\lib\net461\System.Data.Odbc.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.OracleClient" />
-    <Reference Include="System.Data.SqlClient, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Data.SqlClient.4.5.1\lib\net461\System.Data.SqlClient.dll</HintPath>
+    <Reference Include="System.Data.SqlClient, Version=4.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SqlClient.4.6.0\lib\net461\System.Data.SqlClient.dll</HintPath>
     </Reference>
     <Reference Include="System.Deployment" />
     <Reference Include="System.Diagnostics.EventLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -227,8 +227,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Interfaces\IHeaderedAndSelectable.cs" />
+    <Compile Include="Interfaces\IName.cs" />
     <Compile Include="Interfaces\IPassword.cs" />
     <Compile Include="Interfaces\IView.cs" />
+    <Compile Include="Models\TConfig.cs" />
     <Compile Include="ViewModels\TVMEasyPuttyBase.cs" />
     <Compile Include="Base classes\TGroup.cs" />
     <Compile Include="Base classes\TRelayCommand.cs" />
@@ -401,11 +403,17 @@
     <Resource Include="Pictures\TVMClusterResource.png" />
     <Resource Include="Pictures\ViewConsole.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Pictures\FileSave.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="Tools\plink64.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AdditionalFiles>
+    <AdditionalFiles Include="Tools\putty64.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
