--- a/libxputty-tests/libxputty-tests.csproj
+++ b/libxputty-tests/libxputty-tests.csproj
@@ -50,10 +50,16 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Xml.Linq.3.5.21022.801\lib\net20\System.Xml.Linq.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IGroupItemTest.cs" />
+    <Compile Include="SessionSourceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\libxputty-std20\libxputty-std20.csproj">
