--- a/libxputty-tests/packages.config
+++ b/libxputty-tests/packages.config
@@ -3,4 +3,5 @@
   <package id="BLTools.45" version="3.45.2" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net472" />
+  <package id="System.Xml.Linq" version="3.5.21022.801" targetFramework="net472" />
 </packages>
