--- a/libxputty-tests/libxputty-tests.csproj
+++ b/libxputty-tests/libxputty-tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IGroupItemTest.cs" />
     <Compile Include="SessionSourceTest.cs" />
+    <Compile Include="IPuttySessionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\libxputty-std20\libxputty-std20.csproj">
